[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-spiders"
version = "0.1.0"
description = "OSINT Scrapy web spiders/crawlers for news sites and feeds."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Rangertaha", email = "tahasaidi@gmail.com" }]
keywords = ["osint", "scrapy", "crawler", "news", "feeds"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "Scrapy>=2.13,<3",
    "scrapy-redis>=0.9,<1",
    "elasticsearch>=8,<10",
    "feedparser>=6,<7",
    "newspaper4k[nlp]>=0.9,<1",
    "pika>=1.3,<2",
    "lxml_html_clean>=0.1",
]

[project.urls]
Homepage = "https://github.com/Rangertaha/osint-spiders"
Repository = "https://github.com/Rangertaha/osint-spiders"

[tool.setuptools]
packages = ["news", "news.spiders"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
# Line length is governed by the formatter; long template comments / regex
# tuples are left intact.
ignore = ["E501"]
