[build-system]
# setuptools>=77 is required for the SPDX license expression (PEP 639).
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-spiders"
version = "0.1.0"
description = "OSINT Scrapy web spiders/crawlers for news sites and feeds."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Rangertaha", email = "tahasaidi@gmail.com" }]
keywords = ["osint", "scrapy", "crawler", "news", "feeds"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "Scrapy>=2.17,<3",
    "scrapy-redis>=0.9.1,<1",
    "elasticsearch>=9,<10",
    "feedparser>=6.0.12,<7",
    "newspaper4k[nlp]>=0.9.5,<1",
    "pika>=1.4,<2",
    "lxml_html_clean>=0.4",
]

[project.urls]
Homepage = "https://github.com/Rangertaha/osint-spiders"
Repository = "https://github.com/Rangertaha/osint-spiders"
Changelog = "https://github.com/Rangertaha/osint-spiders/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "mypy>=1.14",
]

[tool.setuptools]
packages = ["news", "news.spiders"]

[tool.setuptools.package-data]
# Seed lists read by the spiders via importlib.resources (news/seeds.py).
news = ["data/*.txt"]

[tool.uv]
# newspaper4k pins lxml<6, but only lxml>=6.0.1 ships CPython 3.14 wheels.
# newspaper4k works with lxml 6 (the lxml.html.clean split is already handled
# by the lxml_html_clean dependency), so override the upper bound.
override-dependencies = ["lxml[html-clean]>=6.0.1"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
# Line length is governed by the formatter; long template comments / regex
# tuples are left intact.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["news"]
omit = ["news/spiders/__init__.py"]

[tool.mypy]
python_version = "3.12"
files = ["news", "tests", "addsites.py"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# These dependencies ship no type stubs.
[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "newspaper.*",
    "pika.*",
]
ignore_missing_imports = true
